Add the route POST /participants

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
     "mongodb": "^4.3.1"
   }
 }
